--- a/force-app/main/default/classes/BatchToUpdateUserAccess.cls
+++ b/force-app/main/default/classes/BatchToUpdateUserAccess.cls
@@ -42,10 +42,17 @@ global class BatchToUpdateUserAccess  implements Database.Batchable<sObject> {
         }   
         }
         date dt = system.today();
+        if(!Test.isRunningTest()){
         return Database.getQueryLocator([SELECT Id,Email,Name,
                                          (SELECT permissionsetid,PermissionSet.Name FROM permissionsetassignments WHERE PermissionSet.Name IN:accesswithApi.keySet())
                                          FROM USER 
                                          WHERE isActive = true ]);
+        }else{
+            return Database.getQueryLocator([SELECT Id,Email,Name,
+                                         (SELECT permissionsetid,PermissionSet.Name FROM permissionsetassignments WHERE PermissionSet.Name IN:accesswithApi.keySet())
+                                         FROM USER 
+                                         WHERE isActive = true LIMIT 1 ]); 
+        }
     }
 
 
