--- a/force-app/main/default/classes/EMS_TM_TimesheetClass.cls
+++ b/force-app/main/default/classes/EMS_TM_TimesheetClass.cls
@@ -405,7 +405,9 @@ public class EMS_TM_TimesheetClass {
         timeSheetRecord.EMS_TM_Fri__c                       = timesheet.EMS_TM_Fri__c;
         timeSheetRecord.EMS_TM_Sat__c                       = timesheet.EMS_TM_Sat__c;
         timeSheetRecord.EMS_TM_Week__c                      = timesheet.EMS_TM_Week__c;
-       // timeSheetRecord.Complete_Week__c                    = timesheet.Complete_Week__c;
+        timeSheetRecord.Week_Start_Date__c                  = timesheet.EMS_TM_Week__c;
+        timeSheetRecord.Week_End_Date__c                    = timesheet.Week_End_Date__c;
+       // timeSheetRecord.Complete_Week__c                  = timesheet.Complete_Week__c;
         timeSheetRecord.EMS_TM_Remarks__c                   = timesheet.EMS_TM_Remarks__c;
         timeSheetRecord.EMS_TM_Status__c                    = timesheet.EMS_TM_Status__c;
         timeSheetRecord.User__c                             = timesheet.User__c;
