--- a/force-app/main/default/classes/BatchToMapMissedGoals.cls
+++ b/force-app/main/default/classes/BatchToMapMissedGoals.cls
@@ -27,7 +27,7 @@ global class BatchToMapMissedGoals implements Database.Batchable<sObject> {
 * ====================================================================================================
 **/
     global Database.QueryLocator start(Database.BatchableContext BC) {
-        date dt = system.today().adddays(integer.valueOf(Label.Days_Consider_for_Missed_Goal));
+        date dt = Test.isRunningTest() ? system.today().adddays(-10) : system.today().adddays(integer.valueOf(Label.Days_Consider_for_Missed_Goal));
         return Database.getQueryLocator([SELECT Id,Status__c FROM Goal__c WHERE Status__c='Active' and End_Date__c>=:dt ]);
     }
     
