--- a/force-app/main/default/classes/mySkillsAndCertifcations.cls
+++ b/force-app/main/default/classes/mySkillsAndCertifcations.cls
@@ -1,3 +1,17 @@
+/**
+* @author Subba Kalavala
+* @date 01/03/2023
+* @description  mySkillsAndCertifcations Class to show the data on Home page for certification details
+*
+*               Test code coverage provided by the following test class:
+*               - mySkillsAndCertifcationsTest
+*
+* CHANGE HISTORY
+* ====================================================================================================
+* DATE          NAME                    DESCRIPTION
+* N/A           N/A                     N/A
+* ====================================================================================================
+**/
 public class mySkillsAndCertifcations {
     
 @AuraEnabled(cacheable=true)
@@ -5,7 +19,7 @@ public static datawrapper getMyCertificationsAndSkills(){
         List<Certifications__c> certSkillList = new List<Certifications__c>();
         List<skillCert> skillList = new List<skillCert>();
         User uRec = [SELECT Id,ContactId FROM User WHERE Id=:Userinfo.getUserId()];
-        certSkillList = [SELECT id,Name,contact__c,Certification_Name__c,Completion_Date__c,Last_Used_Project_Name__c,Skill__r.Name,Skill__c,Skill_Rating__c,Type__c FROM Certifications__c WHERE contact__c=:uRec.ContactId];
+        certSkillList = [SELECT id,Name,contact__c,Certification_Name__c,Other__c,Completion_Date__c,Last_Used_Project_Name__c,Skill__r.Name,Skill__c,Skill_Rating__c,Type__c FROM Certifications__c WHERE contact__c=:uRec.ContactId];
         for(Certifications__c exp : certSkillList){
           
            skillCert ex = new skillCert();
@@ -14,7 +28,7 @@ public static datawrapper getMyCertificationsAndSkills(){
                 ex.isSkill = true;
                 ex.rating = exp.Skill_Rating__c;
             }else{
-                ex.name = exp.Certification_Name__c; 
+                ex.name = exp.Certification_Name__c != 'Other' ? exp.Certification_Name__c : exp.Other__c; 
                 ex.certifcationdate = exp.Completion_Date__c;
                  ex.isSkill = false;
             }
