--- a/force-app/main/default/classes/CP_MonthiversaryEmail.cls
+++ b/force-app/main/default/classes/CP_MonthiversaryEmail.cls
@@ -20,40 +20,63 @@ public class CP_MonthiversaryEmail implements Database.Batchable<sObject>, sched
     
     public Database.QueryLocator start(Database.BatchableContext bc){
         return Database.getQueryLocator(
-        	'SELECT id, EMS_EM_JD__c, Name, Personal_Email__c, Is_Email_Sent_Post_Onborading_Mail__c, Post_Onboarding_Confirm__c, Official_Mail__c from Contact WHERE EMS_EM_JD__c != NULL AND (Official_Mail__c != NULL OR Personal_Email__c != NULL) AND RecordType.Name = \'Resource\'' 
+        	'SELECT id, EMS_EM_JD__c, Name, Personal_Email__c, RecordType.Name, Post_Onboarding_Confirm__c, Email from Contact WHERE EMS_EM_JD__c != NULL AND (Email != NULL OR Personal_Email__c != NULL)' 
         );
     }    
     
     public void execute(Database.BatchableContext bc, List<Contact> contactList){
+        List<Messaging.SingleEmailMessage> lstMails = new List<Messaging.SingleEmailMessage>();
+        List<Messaging.SingleEmailMessage> reminderMailsList = new List<Messaging.SingleEmailMessage>();
+        List<Messaging.SingleEmailMessage> monthiversaryMailsList = new List<Messaging.SingleEmailMessage>();
+        List<Messaging.SingleEmailMessage> dojMailsList = new List<Messaging.SingleEmailMessage>();
         for(Contact contactRec : contactList){
             Integer monthNumber = contactRec.EMS_EM_JD__c.month();
-            system.debug('Joining month => '+monthNumber);
             Integer days = Date.today().daysBetween(contactRec.EMS_EM_JD__c);
-            system.debug('Days => '+days);
-            system.debug('Joining date => '+contactRec.EMS_EM_JD__c);
-            system.debug('Name => '+contactRec.Name);
-            if(monthNumber == 2 && days == -28){
-                sendMonthiversaryEmail(contactRec.Official_Mail__c, contactRec.Id);
-            }else if((monthNumber == 1 || monthNumber == 3 || monthNumber == 5 || monthNumber == 8 || monthNumber == 10 || monthNumber == 12) && days == -31){
-                sendMonthiversaryEmail(contactRec.Official_Mail__c, contactRec.Id);
-            }else if((monthNumber == 2 || monthNumber == 4 || monthNumber == 6 || monthNumber == 7 || monthNumber == 9 || monthNumber == 11) && days == -30){
-                sendMonthiversaryEmail(contactRec.Official_Mail__c, contactRec.Id);
-            }else if(contactRec.EMS_EM_JD__c == System.today()){
-                sendEmailOnDOJ(contactRec.Official_Mail__c, contactRec.Id);
-            }else if(contactRec.EMS_EM_JD__c.addDays(-1) == System.today()){
-                System.debug('in gentele reminder 1 => '+contactRec.EMS_EM_JD__c.addDays(-1));
-                sendReminderEmail(contactRec.Personal_Email__c, contactRec.Id);
+            System.debug('Month => '+monthNumber);
+            System.debug('Days => '+days);
+            if(monthNumber == 2 && days == -26 && contactRec.RecordType.Name == 'Resource'){
+                //sendMonthiversaryEmail(contactRec.Email, contactRec.Id);
+                Messaging.SingleEmailMessage message = sendMonthiversaryEmail(contactRec.Email, contactRec.Id);
+                monthiversaryMailsList.add(message);
+            }else if((monthNumber == 1 || monthNumber == 3 || monthNumber == 5 || monthNumber == 8 || monthNumber == 10 || monthNumber == 12) && days == -29 && contactRec.RecordType.Name == 'Resource'){
+                //sendMonthiversaryEmail(contactRec.Email, contactRec.Id);
+                Messaging.SingleEmailMessage message = sendMonthiversaryEmail(contactRec.Email, contactRec.Id);
+                monthiversaryMailsList.add(message);
+            }else if((monthNumber == 2 || monthNumber == 4 || monthNumber == 6 || monthNumber == 7 || monthNumber == 9 || monthNumber == 11) && days == -28 && contactRec.RecordType.Name == 'Resource'){
+                //sendMonthiversaryEmail(contactRec.Email, contactRec.Id);
+                Messaging.SingleEmailMessage message = sendMonthiversaryEmail(contactRec.Email, contactRec.Id);
+                monthiversaryMailsList.add(message);
             }
-            if(contactRec.Post_Onboarding_Confirm__c == False){
-                sendReminderEmailToEmployee(contactRec.Official_Mail__c, contactRec.Id);
+            if(contactRec.EMS_EM_JD__c == System.today() && contactRec.Email != NULL && contactRec.RecordType.Name == 'Resource'){
+                //sendEmailOnDOJ(contactRec.Email, contactRec.Id);
+                Messaging.SingleEmailMessage message = sendEmailOnDOJ(contactRec.Email, contactRec.Id);
+                dojMailsList.add(message);
+            }
+            if(contactRec.EMS_EM_JD__c.addDays(-1) == System.today() && contactRec.RecordType.Name == 'Applicant'){
+                System.debug('Inside condition');
+                Messaging.SingleEmailMessage message = sendReminderEmail(contactRec.Personal_Email__c, contactRec.Id);
+                reminderMailsList.add(message);
+            }
+            if(contactRec.Post_Onboarding_Confirm__c == False  && contactRec.Email != NULL && contactRec.RecordType.Name == 'Resource'){
+                system.debug('Inside condition ==>');
+                system.debug('Email => '+ contactRec.Email);
+                system.debug('Email => '+ contactRec.Personal_Email__c);
+               // sendReminderEmailToEmployee(contactRec.Email, contactRec.Id);
+                Messaging.SingleEmailMessage message = sendReminderEmailToEmployee(contactRec.Email, contactRec.Id);
+                lstMails.add(message);
             }
             
         }
+        Messaging.sendEmail(lstMails);
+        Messaging.sendEmail(reminderMailsList);
+        Messaging.sendEmail(monthiversaryMailsList);
+        Messaging.sendEmail(dojMailsList);
     }
     
-    public static void sendMonthiversaryEmail(String email, String recordId){
+    public static Messaging.SingleEmailMessage sendMonthiversaryEmail(String email, String recordId){
         EmailTemplate emailTemplate =[Select Id,Subject,Description,HtmlValue,DeveloperName,Body from EmailTemplate
                                       where name ='Monthiversary Email' LIMIT 1];
+        String fromEmail = [SELECT Id, Address, DisplayName FROM OrgWideEmailAddress where DisplayName = 'Grid'].Id;
       
         List<String> emailList = new List<String>();
         emailList.add(email);
@@ -64,12 +87,14 @@ public class CP_MonthiversaryEmail implements Database.Batchable<sObject>, sched
         message.setTargetObjectId(recordId);
         message.setTreatTargetObjectAsRecipient(false);
         message.setSaveAsActivity(false);
-        Messaging.sendEmail(new Messaging.SingleEmailMessage[] { message });
+        message.setOrgWideEmailAddressId(fromEmail);
+        return message;
     }
     
-    public static void sendEmailOnDOJ(String email, String recordId){
+    public static Messaging.SingleEmailMessage sendEmailOnDOJ(String email, String recordId){
         EmailTemplate emailTemplate =[Select Id,Subject,Description,HtmlValue,DeveloperName,Body from EmailTemplate
                                       where name ='Welcome Email' LIMIT 1];
+        String fromEmail = [SELECT Id, Address, DisplayName FROM OrgWideEmailAddress where DisplayName = 'Grid'].Id;
       
         List<String> emailList = new List<String>();
         emailList.add(email);
@@ -80,13 +105,15 @@ public class CP_MonthiversaryEmail implements Database.Batchable<sObject>, sched
         message.setTargetObjectId(recordId);
         message.setTreatTargetObjectAsRecipient(false);
         message.setSaveAsActivity(false);
-        Messaging.sendEmail(new Messaging.SingleEmailMessage[] { message });
+        message.setOrgWideEmailAddressId(fromEmail);
+        //Messaging.sendEmail(new Messaging.SingleEmailMessage[] { message });
+        return message;
     }
     
-    public static void sendReminderEmail(String email, String recordId){
+    public static Messaging.SingleEmailMessage sendReminderEmail(String email, String recordId){
         EmailTemplate emailTemplate =[Select Id,Subject,Description,HtmlValue,DeveloperName,Body from EmailTemplate
                                       where name ='Gentle Reminder Email' LIMIT 1];
-      
+        String fromEmail = [SELECT Id, Address, DisplayName FROM OrgWideEmailAddress where DisplayName = 'Grid'].Id;
         List<String> emailList = new List<String>();
         emailList.add(email);
         system.debug('Enaillist 3 => '+emailList);
@@ -96,23 +123,27 @@ public class CP_MonthiversaryEmail implements Database.Batchable<sObject>, sched
         message.setTargetObjectId(recordId);
         message.setTreatTargetObjectAsRecipient(false);
         message.setSaveAsActivity(false);
-        Messaging.sendEmail(new Messaging.SingleEmailMessage[] { message });
+        message.setOrgWideEmailAddressId(fromEmail);
+        return message;
     }
     
-    public static void sendReminderEmailToEmployee(String email, String recordId){
+    public static Messaging.SingleEmailMessage sendReminderEmailToEmployee(String email, String recordId){
         EmailTemplate emailTemplate =[Select Id,Subject,Description,HtmlValue,DeveloperName,Body from EmailTemplate
                                       where name ='Send Reminder Email To Employee' LIMIT 1];
-      
+       // List<Messaging.SingleEmailMessage> mails = new List<Messaging.SingleEmailMessage>();
+       String fromEmail = [SELECT Id, Address, DisplayName FROM OrgWideEmailAddress where DisplayName = 'Grid'].Id;
+        
         List<String> emailList = new List<String>();
         emailList.add(email);
-        system.debug('Enaillist 3 => '+emailList);
+        system.debug('Enaillist 4 => '+emailList);
         Messaging.SingleEmailMessage message = new Messaging.SingleEmailMessage();
         message.toAddresses = emailList;
         message.setTemplateID(emailTemplate.Id);
         message.setTargetObjectId(recordId);
+        message.setOrgWideEmailAddressId(fromEmail);
         message.setTreatTargetObjectAsRecipient(false);
         message.setSaveAsActivity(false);
-        Messaging.sendEmail(new Messaging.SingleEmailMessage[] { message });
+        return message;
     }
     
     public void finish(Database.BatchableContext bc){
